# docs/swagger.json
@@ -732,6 +732,9 @@
         "order.TransactionListRequest": {
             "type": "object",
             "properties": {
+                "client_id": {
+                    "type": "string"
+                },
                 "endTime": {
                     "type": "string"
                 },
@@ -793,11 +796,16 @@
         "payment.PayOrderRequest": {
             "type": "object",
             "required": [
-                "order_no"
+                "order_no",
+                "pay_key"
             ],
             "properties": {
                 "order_no": {
                     "type": "string"
+                },
+                "pay_key": {
+                    "type": "string",
+                    "maxLength": 10
                 }
             }
         },
